Use Vercel proxy to bypass CORS

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
+    { "source": "/api/:path*", "destination": "https://event-management-app-z11y.onrender.com/api/:path*" },
     { "source": "/(.*)", "destination": "/" }
   ]
 }
